# nigerian-dashboard

./: .env.example  .gitignore  AUTHORS  LICENSE  NOTICE  PROVENANCE.json  Procfile  README.md  about.html  ai_assistant.py  analytics.html  api_docs.html  assets_liabilities.html  briefing.html  compare.html  compiler.py  currency_circulation.html  currency_converter.html  data-entry.html  data_sources.html  embed.html  exchange_rate.html  financial_statement.html  forecasting.py  gdp.html  index.html  inflation.html  interest_rate.html  main.py  multicurrency.html  nfem.html  playground.html  pyproject.toml  railway.json  reform_impact.html  render.yaml  requirements-dev.txt  requirements.txt  reserves.html  roadmap.html  (+6 more)
collectors/: README.md  __init__.py  base.py  runner.py  sources_scaffold.py  world_bank.py
css/: style.css
docs/: DEFENSE_PREP.md  DEFENSE_PREP_ESSENTIALS.docx  DEFENSE_PREP_ESSENTIALS.md  FYP_REPORT.docx  FYP_REPORT.md  make_docx.py  make_slides.py  ~$P_REPORT.docx
js/: nav.js
mcp-server/: README.md  index.js  package.json
offline_backup/: READ_ME_FIRST.txt  about.html  analytics.html  api_docs.html  assets_liabilities.html  briefing.html  compare.html  currency_circulation.html  currency_converter.html  data_sources.html  embed.html  exchange_rate.html  financial_statement.html  gdp.html  index.html  inflation.html  interest_rate.html  llms.txt  multicurrency.html  nfem.html  playground.html  reform_impact.html  reserves.html  serve.bat  shared.js  status.html  style.css
sdk/python/: pyproject.toml
sdk/python/npedata/: __init__.py
(+60 files in other folders)
